# team-manager

./: .gitignore  .replit  ai_assistant.py  app.py  launcher.py  package-lock.json  package.json  proxy.py  pyproject.toml  replit.md  start.sh  teams_client.py  vector_store.py
attached_assets/: Pasted--version-7-0-2026-03-02-18-02-08-924-apscheduler-execut_1772474591751.txt  Pasted-2026-03-05-10-57-24-272-apscheduler-executors-default-R_1772708317137.txt  Pasted-30-azure-devops-client-DevOps-GET-https-dev-azure-com-m_1772623616122.txt  Pasted-Management-API-running-on-port-3001-START-Starting-reve_1772707676906.txt  Pasted-Ok-I-want-a-different-mechanism-to-be-used-for-reading-_1772544238555.txt
attached_assets/audio_debug/: recording_90cd73b7_chunk01.txt  recording_90cd73b7_chunk02.txt  recording_90cd73b7_chunk03.txt  recording_90cd73b7_chunk04.txt  recording_90cd73b7_chunk05.txt  recording_90cd73b7_chunk06.txt  recording_90cd73b7_chunk07.txt  recording_90cd73b7_chunk08.txt  recording_90cd73b7_chunk09.txt  recording_90cd73b7_chunk10.txt  recording_90cd73b7_chunk100.txt  recording_90cd73b7_chunk101.txt  recording_90cd73b7_chunk102.txt  recording_90cd73b7_chunk103.txt  recording_90cd73b7_chunk104.txt  recording_90cd73b7_chunk105.txt  recording_90cd73b7_chunk106.txt  recording_90cd73b7_chunk107.txt  recording_90cd73b7_chunk108.txt  recording_90cd73b7_chunk109.txt  recording_90cd73b7_chunk11.txt  recording_90cd73b7_chunk110.txt  recording_90cd73b7_chunk111.txt  (+93 more)
chroma_data/: chroma.sqlite3
frontend/: next.config.ts  package-lock.json  package.json
(+88 files in other folders)
