[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.1",
    "msal>=1.34.0",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "tenacity>=9.1.4",
]
